--- a/src/directives/templates/styles/components/_mms-spec.scss
+++ b/src/directives/templates/styles/components/_mms-spec.scss
@@ -7,6 +7,7 @@ mms-spec {
     	margin-top: 24px;
 		margin-bottom: 32px;
 		height: inherit;
+		width: 100%;
 	}
 
 	h2 {
@@ -15,6 +16,7 @@ mms-spec {
 		font-size: 12px;
 		margin-top: 10px;
 		margin-bottom: 5px;
+		white-space: nowrap;
 	}
 
 	h3 {
@@ -24,6 +26,13 @@ mms-spec {
 		margin-top: 5px;
 		margin-bottom: 5px;
 		margin-left: 15px;
+		white-space: nowrap;
+
+		&.sysmlid {
+			width: 250px;
+			word-wrap: break-word;
+			white-space: normal;
+		}
 	}
 
 	p.doc-text {
